# datagen

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.MD  compile.sh  dense-gen.cpp  loc.sh  sparse-gen.cpp
common/: Random.h  Zipf.h
core/: Context.h  DenseVector.h  Macros.h  SparseVector.h  Vector.h
